added hover opacity

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="button-container primary">
           <a href="#"><strong>Proceed to Payment</strong></a>
         </div>
-        <div class="button-container">
+        <div class="button-container secondary">
           <a href="#"><strong>Cancel Order</strong></a>
         </div>
       </div>
